--- a/extract_hid.ipynb
+++ b/extract_hid.ipynb
@@ -86,7 +86,7 @@
     "df['dtstart'] = pd.to_datetime(df['dtstart'])\n",
     "\n",
     "# VitalDB 로그인\n",
-    "if vitaldb.login('eundain94', 'eundain94', '172.16.142.27', '80'):\n",
+    "if vitaldb.login('YOUR_ID', 'YOUR_PASSWORD', 'YOUR_IP', '80'):\n",
     "    DOWNLOAD_DIR = 'D:/data'\n",
     "    \n",
     "    # 디렉토리가 없으면 생성\n",
